Update dockerfile for release v.2.0.0

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@
 # the base for this Dockerfile public
 FROM photon:1.0
 
-MAINTAINER craiggumbley@gmail.com
+MAINTAINER @_chelnak
 LABEL PSVersion="v6.0.0-alpha.14"
 
 # Add PowerShell repository location to Photon OS
@@ -16,9 +16,6 @@ enabled=1\n\
 skip_if_unavailable=True\n '\
 >> /etc/yum.repos.d/powershell.repo
 
-# Set the working directory 
-WORKDIR /tmp
-
 # Install PowerShell on Photon 
 RUN tdnf install -y unzip powershell curl openssl
 
@@ -26,20 +23,13 @@ RUN tdnf install -y unzip powershell curl openssl
 RUN mkdir -p /root/.config/powershell/
 RUN mkdir -p ~/.local/share/powershell/Modules
 
-# Grab PowervRA
-ADD https://github.com/jakkulabs/PowervRA/archive/development.zip .
-RUN mkdir ~/.local/share/powershell/Modules/PowervRA
-RUN unzip development.zip
-RUN cp -R PowervRA-development/PowervRA/* ~/.local/share/powershell/Modules/PowervRA/
-
-# Add Startup script
-ADD profile.ps1 .
+# Bootstrap the image with PowervRA
+ADD bootstrap.ps1 .
+RUN powershell ./bootstrap.ps1
 
 # Change the default PowerShell profile to include the new profile
+ADD profile.ps1 .
 RUN mv profile.ps1 /root/.config/powershell/Microsoft.PowerShell_profile.ps1
-
-# Reset workdir
-WORKDIR /
 
 # Start PowerShell
 CMD powershell -NoLogo
