Adds access_token for commits

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,7 @@
 version: 2.0.0.{build}
+environment:
+  access_token:
+    secure: 3WtkOGm4k++uL56CWe9sJF6HzFAUs7BkM7mvbqdKhkwXOFDtZFIC0k7hM5eGmfLj
 branches:
   only:
   - development
