--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,10 +6,11 @@ branches:
   only:
   - development
 image: WMF 5
-build: off
 init:
   - ps: Install-PackageProvider NuGet -Force | Out-Null
 install:
   - ps: Install-Module -Name Psake, Pester, PSScriptAnalyzer, PlatyPS, BuildHelpers -Force
-test_script:
+build_script:
   - ps: .\build.ps1
+test_script:
+  - ps: .\build.ps1 -Task Test
