documentation updates for development branch

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,12 +5,12 @@ repo_url: https://github.com/jakkulabs/PowervRA
 site_author: JakkuLabs
 edit_uri: edit/master/docs/
 theme: readthedocs
-copyright: "PowervRA is licenced under the <a href='https://github.com/jakkulabs/PowervRA/raw/master/LICENSE'>MIT license"
+copyright: "PowervRA is licensed under the <a href='https://github.com/jakkulabs/PowervRA/raw/master/LICENSE'>MIT license"
 pages:
 - 'Home' : 'index.md'
 - 'Change log' : 'CHANGELOG.md'
 - 'Build' : 'build.md'
-- 'Functions':
+- 'Functions': 
     - Add-vRAPrincipalToTenantRole : functions/Add-vRAPrincipalToTenantRole.md
     - Add-vRAReservationNetwork : functions/Add-vRAReservationNetwork.md
     - Add-vRAReservationStorage : functions/Add-vRAReservationStorage.md
