Lint after build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,12 +19,6 @@ steps:
   inputs:
     configFilePath: GitVersion.yml
 
-- script: |
-    npm install eclint
-    node ./node_modules/eclint/bin/eclint.js check
-  displayName: "Validate editorconfig against src"
-  workingDirectory: $(System.DefaultWorkingDirectory)/src
-
 - task: PowerShell@1
   displayName: 'Execute Build'
   inputs:
@@ -34,7 +28,7 @@ steps:
     npm install eclint
     node ./node_modules/eclint/bin/eclint.js check
   displayName: "Validate editorconfig against release"
-  workingDirectory: $(System.DefaultWorkingDirectory)/Release
+  workingDirectory: $(System.DefaultWorkingDirectory)
 
 - task: PublishTestResults@2
   displayName: 'Publish Test Results **\TEST_*.xml'
