Ensure that the build is only triggered for when certain paths change

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,13 @@ trigger:
     include:
       - "*"
 
+  paths:
+    include:
+      - src/*
+      - tests/*
+      - tools/*
+      - azure-pipelines.yml
+
 pr: none
 
 pool:
