--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,40 +14,26 @@ trigger:
 pr: none
 
 pool:
-  name: Hosted VS2017
-  demands:
-    - DotNetFramework
-    - npm
-    - node.js
+  vmImage: windows-latest
 
-steps:
-- task: gittools.gitversion-preview.gitversion-task.GitVersion@5
-  displayName: GitVersion
-  inputs:
-    configFilePath: GitVersion.yml
+stages:
+  - stage: CI
+    jobs:
+    - job: BuildModule
+      steps:
+        - task: gittools.gitversion.gitversion-task.GitVersion@5
+          displayName: GitVersion
+          inputs:
+            configFilePath: GitVersion.yml
 
-- task: PowerShell@1
-  displayName: 'Execute Build'
-  inputs:
-    scriptName: tools/build.ps1
+        - task: PowerShell@1
+          displayName: 'Execute Build'
+          inputs:
+            scriptName: tools/build.ps1
 
-- task: PublishTestResults@2
-  displayName: 'Publish Test Results **\TEST_*.xml'
-  inputs:
-    testResultsFormat: NUnit
-    testResultsFiles: '**\TEST_*.xml'
-  continueOnError: true
-
-- task: CopyFiles@2
-  displayName: 'Copy Files to: Release'
-  inputs:
-    SourceFolder: tools
-    Contents: |
-      Publish-PSModule.ps1
-    TargetFolder: Release
-
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: Release'
-  inputs:
-    PathtoPublish: Release
-    ArtifactName: Release
+        - task: PublishTestResults@2
+          displayName: 'Publish Test Results **\TEST_*.xml'
+          inputs:
+            testResultsFormat: NUnit
+            testResultsFiles: '**\TEST_*.xml'
+          continueOnError: true
