--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,10 @@ stages:
     jobs:
     - job: BuildModule
       steps:
-        - task: gittools.gitversion.gitversion-task.GitVersion@5
-          displayName: GitVersion
+        - task: UseGitVersion@5
           inputs:
+            versionSpec: 5.x
+            useConfigFile: true
             configFilePath: GitVersion.yml
 
         - task: PowerShell@1
