--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ stages:
     jobs:
     - job: Publish
       dependsOn: BuildModule
-      condition: and(succeeded('BuildModule'), startswithvariables['Build.SourceBranch'], 'refs/tags/v' )
+      condition: and(succeeded('BuildModule'), startswith(variables['Build.SourceBranch'], 'refs/tags/v') )
       steps:
         - task: DownloadPipelineArtifact@2
           displayName: Restore Release Artifact
