--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,11 +64,14 @@ stages:
           inputs:
             artifactName: Tools
 
+        - script: 'ECHO testing'
+
         - task: PowerShell@1
           displayName: 'Publish Module'
           inputs:
             scriptName: $(Pipeline.Workspace)/Tools/Publish-PSModule.ps1
             arguments: -ApiKey $(PSGalleryAPIKey) -Path "$(Pipeline.Workspace)/Release/PowervRA" -CheckForExistingVersion
+          enabled: false
 
         - task: GitHubRelease@1
           displayName: 'GitHub Release'
@@ -76,3 +79,5 @@ stages:
             gitHubConnection: 'JakkuLabs'
             tagPattern: 'v*'
             title: PowervRA
+          enabled: false
+
