--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,4 +85,4 @@ stages:
           inputs:
             gitHubConnection: 'JakkuLabs'
             title: PowervRA
-
+            assets: "$(Pipeline.Workspace)/Release/PowervRA.$(Build.BuildNumber).zip"
