--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,12 +34,13 @@ stages:
           displayName: 'Execute Build'
           inputs:
             scriptName: tools/build.ps1
+            arguments: -Task BuildWithTests
 
         - task: PublishTestResults@2
-          displayName: 'Publish Test Results **\TEST_*.xml'
+          displayName: 'Publish Test Results'
           inputs:
             testResultsFormat: NUnit
-            testResultsFiles: '**\TEST_*.xml'
+            testResultsFiles: 'tools\testResults.xml'
           continueOnError: true
 
         - task: PublishPipelineArtifact@1
