Move Publish Unit Tests to composite action

--- a/.github/workflows/ps-module.yml
+++ b/.github/workflows/ps-module.yml
@@ -61,23 +61,11 @@ jobs:
           name: docs
           path: ${{ github.workspace }}/docs
 
-  publish_test_results:
-
-    name: "Publish Unit Tests Results"
-    if: always()
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-
       - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        if: always()
+        uses: EnricoMi/publish-unit-test-result-action/composite@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          files: "./Tools/testResults.xml"
+          files: "tools/testResults.xml"
 
   publish_docs:
 
