--- a/.github/workflows/ps-module.yml
+++ b/.github/workflows/ps-module.yml
@@ -28,13 +28,13 @@ jobs:
           fetch-depth: 0
 
       - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.8
+        uses: gittools/actions/gitversion/setup@v0.9.10
         with:
-          versionSpec: '5.6.9'
+          versionSpec: '5.x'
 
       - name: Determine Version
         id:   gitversion
-        uses: gittools/actions/gitversion/execute@v0.9.8
+        uses: gittools/actions/gitversion/execute@v0.9.10
         with:
           useConfigFile: true
           configFilePath: GitVersion.yml
